--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://frontenddev-01.github.io/portfolio/",
+  "homepage": "https://FrontEndDev-01.github.io/portfolio/",
   "name": "portfolio",
   "version": "1.0.0",
   "description": "react-developer",
