--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-tooltip": "^5.21.5",
     "redux-persist": "^6.0.0",
     "style-loader": "^3.3.3",
+    "typewriter-effect": "^2.21.0",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
